--- a/requirements.txt
+++ b/requirements.txt
@@ -1,30 +1,27 @@
 # CORE
-streamlit
-yfinance
-pandas
-numpy
-plotly
+streamlit>=1.32.0
+yfinance>=0.2.37
+pandas>=2.1.4
+numpy>=1.26.3
+plotly>=5.18.0
 
 # MODELES
-prophet
-statsmodels
-scikit-learn
-keras
-tensorflow  # ou tensorflow-cpu si sans GPU
+prophet>=1.1.5
+statsmodels>=0.14.1
+scikit-learn>=1.3.2
+keras>=2.15.0
+tensorflow>=2.16.0  # Version compatible Python 3.12
 
 # TECHNIQUE
-ta  # Pour les indicateurs techniques
+ta>=0.11.0
 
 # UTILITAIRES
-python-dotenv
-requests
-python-dateutil
-pytz
-tzlocal
-uuid
-logging
-warnings
+python-dotenv>=1.0.0
+requests>=2.31.0
+python-dateutil>=2.8.2
+pytz>=2023.3
+tzlocal>=5.2
 
-# OPTIONNEL (pour fonctionnalités avancées)
-websockets  # Pour connexion temps réel
-alpaca-trade-api  # Alternative à yfinance
+# OPTIONNEL
+websockets>=12.0
+alpaca-trade-api>=3.3.0
