--- a/requirements.txt
+++ b/requirements.txt
@@ -5,12 +5,12 @@ pandas>=2.1.4
 numpy>=1.26.3
 plotly>=5.18.0
 
-# MODELES
+# MODELES (compatibles Python 3.12)
 prophet>=1.1.5
 statsmodels>=0.14.1
 scikit-learn>=1.3.2
-keras>=2.15.0
-tensorflow>=2.16.0  # Version compatible Python 3.12
+keras>=3.0.0  # Nouvelle version compatible
+tensorflow>=2.16.0  # Version minimale pour Python 3.12
 
 # TECHNIQUE
 ta>=0.11.0
