--- a/requirements.txt
+++ b/requirements.txt
@@ -23,5 +23,4 @@ pytz>=2023.3
 tzlocal>=5.2
 
 # OPTIONNEL
-websockets>=12.0
-alpaca-trade-api==3.2.0  # Dernière version disponible
+alpaca-trade-api==3.2.0
